[package]
name = "fusion-web-playground"
version = "0.1.0"
edition = "2021"
description = "A statically hosted web playground for the Ion Fusion language."
readme = "README.md"
repository = "https://github.com/ion-fusion/fusion-web-playground"
license = "Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
yew = { version="0.21", features=["csr"] }
